# spmi-scrapper

./: .gitignore  pyproject.toml  spmi-scrapper.py  test.py
